# openharness-ai

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  good_first_issue.md
.github/workflows/: ci.yml
backend/openharness/: __init__.py
backend/openharness/agents/: __init__.py
backend/openharness/agents/perf_agent/: __init__.py  generator.py  models.py  planner.py  validator.py
backend/openharness/agents/repo_agent/: __init__.py  analyzer.py  config.py  models.py  scanner.py
backend/tests/unit/: test_perf_agent_generator.py  test_perf_agent_planner.py  test_perf_agent_validator.py  test_repo_agent.py  test_repository_manifest_schema.py
cli/openharness_cli/: __init__.py  main.py
cli/tests/: test_cli.py
docs/: architecture.md  development-plan.md  i18n.md  mvp-roadmap.md  repo-agent-configuration.md  repository-structure.md  technical-design.md
docs/schemas/: k6-generation-result.schema.json  k6-validation-result.schema.json  performance-plan.schema.json  repository-manifest.schema.json
examples/fastapi-service/: Dockerfile  README.md  openharness.yaml  pyproject.toml
examples/fastapi-service/app/: __init__.py  main.py
